
project('libjpegEAWebKit', 'c', version : 'local-1.00.06-01')

# libjpegEAWebKit.vcxproj

includes = include_directories(
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/include',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source'
)

headers = include_directories(
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/include'
)

sources = [
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcapimin.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcapistd.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jccoefct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jccolor.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcdctmgr.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jchuff.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcinit.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcmainct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcmarker.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcmaster.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcomapi.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcparam.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcphuff.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcprepct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jcsample.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jctrans.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdapimin.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdapistd.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdatadst.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdatasrc.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdcoefct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdcolor.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jddctmgr.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdhuff.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdinput.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdmainct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdmarker.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdmaster.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdmerge.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdphuff.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdpostct.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdsample.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jdtrans.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jerror.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jfdctflt.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jfdctfst.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jfdctint.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jidctflt.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jidctfst.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jidctint.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jidctred.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jmemmgr.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jquant1.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jquant2.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jsupport_ea.c',
    '../../../../EAWebKitSupportPackages/libjpegEAWebKit/local-1.00.06-01/source/jutils.c'

    
]

cflags = [
  '-DLIBJPEG_EA_SUPPORT_ENABLED=1'
]

libn = meson.project_name()

if get_option('buildtype') == 'debug'
  cflags += '-D_DEBUG'
  cflags += '-DEA_DEBUG'
else
  cflags += '-DNDEBUG' 
endif

dependencies = [
]

target = shared_library(
  libn,
  sources,
  c_args : cflags,
  include_directories: includes,
  dependencies: dependencies
)

project_dep = declare_dependency(
  include_directories: headers,
  link_with : target
)

set_variable(meson.project_name() + '_dep', project_dep)

